42/terraform/004-routes.tf
# --- PUBLIC ROUTING ---
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "DevOpsPublicRouteTable" }
}

resource "aws_route" "public_internet_access" {
  route_table_id         = aws_route_table.public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.gw.id # Reference .gw
}

resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_rt.id
}

# --- PRIVATE ROUTING ---
resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "DevOpsPrivateRouteTable" }
}

resource "aws_route" "private_nat_access" {
  route_table_id = aws_route_table.private_rt.id
  # Matching your CLI image destination: 10.2.0.0/24
  # Note: Usually this is 0.0.0.0/0 for full internet access
  destination_cidr_block = "10.2.0.0/24"
  nat_gateway_id         = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id      = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}
